# rgb2spec

./: CMakeLists.txt  README.md  macros.h  rgb2spec.c  rgb2spec.h  rgb2spec_opt.cpp
details/: lu.h
